# SilentCut

./: .gitignore  README.md  audio_processor.py  audio_waveform_viewer.py  gui.py  pyproject.toml  requirements.txt  run.py  run_web.py  webui_streamlit.py
app/: __init__.py  main.py  utils_cleanup.py
app/controllers/: __init__.py  desilencer_controller.py  waveform_controller.py
app/models/: __init__.py  audio_processor.py
app/views/: __init__.py  desilencer_tab.py  main_window.py  waveform_tab.py
app/widgets/: __init__.py  mpl_canvas.py
silent_detect/: split_save.py
silent_detect/demo/: demo_ten_vad.py
silent_detect/utils/: vad_detect.py
silentcut/: __init__.py
silentcut/audio/: processor.py
silentcut/cli/: __main__.py
silentcut/gui/: __main__.py  main.py
silentcut/gui/controllers/: desilencer_controller.py  waveform_controller.py
silentcut/gui/views/: main_window.py
silentcut/utils/: cleanup.py  file_utils.py
silentcut/web/: __main__.py  app.py
